--- a/language/SI.json
+++ b/language/SI.json
@@ -2,7 +2,7 @@
     "__ASENAJSON__": true,
     "LANGUAGE": "sinhala",
     "LANGCODE": "si",
-    "AUTHOR": "HIRUWA",
+    "AUTHOR": "vihanga",
     "STRINGS": {
         "_asena": {
             "COMMAND": "Command",
@@ -16,14 +16,14 @@
             "NEED_URL": "කරුණාකර URL එකක් ඇතුළු කරන්න!  උදාහරණයක් :",
             "INVALID_URL": "```වලංගු URL එක ඇතුලත් කරන්න !```",
             "INVALID_PLUGIN": "*❌ ඔබේ ප්ලගිනය වලංගු නොවේ !*\n*Error:*",
-            "INSTALLED": "*✅ ප්ලගිනය සාර්ථකව ස්ථාපනය කර ඇත !*",
+            "INSTALLED": "*🪔 ප්ලගිනය සාර්ථකව ස්ථාපනය කර ඇත !*",
             "PLUGIN_DESC": "ඔබ ස්ථාපනය කර ඇති ප්ලගීන පෙන්වයි.",
             "INSTALLED_FROM_REMOTE": "*ඔබ බාහිරව ස්ථාපනය කරන ප්ලගීන :*\n",
             "NO_PLUGIN": "*ඔබ කිසිදු බාහිර ප්ලගීන ස්ථාපනය කර නැත !*",
             "REMOVE_DESC": "Removes the plugin.",
             "NEED_PLUGIN": "```කරුණාකර ප්ලගිනයක් ඇතුළු කරන්න!  උදාහරණයක් : .plugin __test```",
             "NOT_FOUND_PLUGIN": "```සමහර විට ඔබ එවැනි ප්ලගිනයක් සවි කර ඇත, නැතහොත් සමහර විට නොවේ.  නමුත් දැන් එය නිසැක නොවන බව නිසැකයි .```",
-            "DELETED": "*✅ Module successfully deleted!*"
+            "DELETED": "*🪔 Module successfully deleted!*"
         },
         "admin": {
             "BAN_DESC": "කණ්ඩායමේ කෙනෙක්ව තහනම් කරන්න.  පණිවිඩයට පිළිතුරු දෙන්න හෝ විධානය භාවිතා කිරීමට පුද්ගලයෙකු ටැග් කරන්න .",
@@ -95,25 +95,25 @@
             "NO_FILTER": "*❌ මෙම කතාබහ තුළ පෙරහන් නොමැත !*",
             "FILTERS": "*🔎 මෙම පිළිසඳර තුළ ඔබේ පෙරහන තිබේ :*",
             "NEED_REPLY": "*❌ කරුණාකර පිළිතුර ටයිප් කරන්න !*\n*Exampleඋදාහරණය:*",
-            "FILTERED": "*✅ සාර්ථකව සකසා ඇත * ```{}``` *පෙරීමට !*",
+            "FILTERED": "*🪔 සාර්ථකව සකසා ඇත * ```{}``` *පෙරීමට !*",
             "STOP_DESC": "ඔබ කලින් එකතු කළ පෙරහන නවත්වන්න .",
             "NEED_FILTER": "*❌ කරුණාකර පෙරහනක් ටයිප් කරන්න !*\n*Exampleඋදාහරණයක් :*",
             "ALREADY_NO_FILTER": "*❌ දැනටමත් මෙවැනි පෙරහනක් නොමැත !*",
-            "DELETED": "*✅ පෙරහන සාර්ථකව මකන ලදි !*"
+            "DELETED": "*🪔 පෙරහන සාර්ථකව මකන ලදි !*"
         },
         "greetings": {
             "WELCOME_DESC": "එය පිළිගැනීමේ පණිවිඩය සකසයි.  ඔබ එය හිස්ව තැබුවහොත් එය පිළිගැනීමේ පණිවිඩය පෙන්වයි .",
             "NOT_SET_WELCOME": "*ඔබ තවමත් පිළිගැනීමේ පණිවිඩය සකසා නැත .!*\n**To set:** ```.welcome ඔබේ පිළිගැනීමේ පණිවිඩය ```",
-            "WELCOME_ALREADY_SETTED": "*✅ පිළිගැනීමේ පණිවිඩය දැනටමත් සකසා ඇත!*\n*පණිවුඩය :* ```",
+            "WELCOME_ALREADY_SETTED": "*🪔 පිළිගැනීමේ පණිවිඩය දැනටමත් සකසා ඇත!*\n*පණිවුඩය :* ```",
             "NEED_WELCOME_TEXT": "*පිළිගැනීමේ පණිවිඩය සැකසීම සඳහා ඔබ පණිවිඩයක් ලිවිය යුතුය .*\n*Example:* ```.welcome සාදරයෙන් පිළිගනිමු 😍!```",
-            "WELCOME_DELETED": "*✅පිළිගැනීමේ පණිවිඩය සාර්ථකව මකා දමා ඇත !*",
-            "WELCOME_SETTED": "*✅ පිළිගැනීමේ පණිවිඩය සාර්ථකව සකසා ඇත !*",
+            "WELCOME_DELETED": "*🪔පිළිගැනීමේ පණිවිඩය සාර්ථකව මකා දමා ඇත !*",
+            "WELCOME_SETTED": "*🪔 පිළිගැනීමේ පණිවිඩය සාර්ථකව සකසා ඇත !*",
             "GOODBYE_DESC": "සමුගැනීමේ පණිවිඩය සකසයි.  ඔබ හිස්ව තැබුවහොත්, එය ආයුබෝවන් පණිවිඩය පෙන්නුම් කරයි .",
             "NOT_SET_GOODBYE": "*ඔබ සමුගැනීමේ පණිවිඩයක් තබා නැත !*\n*To set:* ```.goodbye ඔබේ ආයුබෝවන් පණිවිඩය ```",
-            "GOODBYE_ALREADY_SETTED": "*✅ Goodbye message has been set!*\n*Message:* ```",
+            "GOODBYE_ALREADY_SETTED": "*🪔 Goodbye message has been set!*\n*Message:* ```",
             "NEED_GOODBYE_TEXT": "*You must write a message to set up the goodbye message.*\n*Example:* ```.goodbye ආයුබෝවන් !```",
-            "GOODBYE_DELETED": "*✅ ආයුබෝවන් පණිවිඩය සාර්ථකව මකා දමා ඇත !*",
-            "GOODBYE_SETTED": "*✅ ආයුබෝවන් පණිවිඩය සාර්ථකව සකසා ඇත !*"
+            "GOODBYE_DELETED": "*🪔 ආයුබෝවන් පණිවිඩය සාර්ථකව මකා දමා ඇත !*",
+            "GOODBYE_SETTED": "*🪔 ආයුබෝවන් පණිවිඩය සාර්ථකව සකසා ඇත !*"
         },
         "lydia": {
             "ADDLYDIA_DESC": "පරිශීලකයා සඳහා ලිඩියා (AI) සක්‍රිය කරයි .",
@@ -217,13 +217,13 @@
         "updater": {
             "UPDATER_DESC": "යාවත්කාලීන පරීක්ෂා කරයි .",
             "UPDATE": "*ඔබේ බොට් එක සම්පුර්ණයෙන්ම යාවත්කාලීනයි !*",
-            "NEW_UPDATE": "*T-REX BOT යාවත්කාලීන ලබා ගත හැකිය*\n\n යාවත්කාලීන කිරීමට පෙර කරුණාකර ආධාරක කණ්ඩායමෙන් විමසන්න .එසේ නැත්නම් ලබා ගැනීමේ අවස්ථාව  error\n\nවෙනස්කම් :\n```",
+            "NEW_UPDATE": "*PODDA-Z BOT යාවත්කාලීන ලබා ගත හැකිය*\n\n යාවත්කාලීන කිරීමට පෙර කරුණාකර ආධාරක කණ්ඩායමෙන් විමසන්න .එසේ නැත්නම් ලබා ගැනීමේ අවස්ථාව  error\n\nවෙනස්කම් :\n```",
             "UPDATE_NOW_DESC": "එය යාවත්කාලීන කරයි. .",
-            "UPDATING": "```T-REX Updating...💥💨```",
+            "UPDATING": "```PODDA-Z Updating...💥💨```",
             "INVALID_HEROKU": "*❌ ඔබේ හෙරෝකු තොරතුරු වැරදියි !*",
-            "UPDATED": "*T-REX යාවත්කාලීන කරන ලදි  🤠✅*",
-            "UPDATED_LOCAL": "*✅ සාර්ථකව යාවත්කාලීන කරන ලදි !*",
-            "AFTER_UPDATE": "*😘 T-REX නැවත ආරම්භ කිරීම *"
+            "UPDATED": "*PODDA-Z යාවත්කාලීන කරන ලදි  🤠🪔*",
+            "UPDATED_LOCAL": "*🪔 සාර්ථකව යාවත්කාලීන කරන ලදි !*",
+            "AFTER_UPDATE": "*😘 PODDA-Z නැවත ආරම්භ කිරීම *"
         },
         "weather": {
             "WEATHER_DESC": "නකාලගුණය පෙන්වන්න .",
@@ -419,10 +419,10 @@
             "FF_PROC": "Applying Effect.."
         },
         "spammer": {
-            "SPAM_DESC": "ඔබ නවත්වන තුරු එය ස්පෑම් ය t.\n⌨️ Example: .spam T-REX BOT",
+            "SPAM_DESC": "ඔබ නවත්වන තුරු එය ස්පෑම් ය t.\n⌨️ Example: .spam PODDA-Z BOT",
             "NEED_WORD": "*සමහර වචන අවශ්‍යයි !*",
             "STOP_SPAMDESC": "අයාචිත තැපැල් විධානය නතර කරයි. ",
-            "STOP_SPAM": "✅ *spam සාර්ථකව නැවැත්වීය!  කරුණාකර මොහොතක් ඉන්න. .*"
+            "STOP_SPAM": "🪔 *spam සාර්ථකව නැවැත්වීය!  කරුණාකර මොහොතක් ඉන්න. .*"
         },
         "carbon": {
             "CARBON_DESC": "පෙළට-ප්‍රතිරූපය සඳහා carbon.sh භාවිතා කරයි ",
@@ -533,7 +533,7 @@
             "GİST": "Public Gists:",
             "JOİN": "Joining Date:",
             "HİRE_FALSE": "Cannot Hirable 🚫",
-            "HİRE_TRUE": "Hirable ☑️",
+            "HİRE_TRUE": "Hirable 🎆",
             "HİRE": "Can s/he Hirable?:",
             "URL": "Profile URL:",
             "UPDATE": "Last Update:"
